Kubernetes/NetworkPolicy/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels :
    app: nginx
    role: web
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: nginx2
  labels :
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: nginx3
  labels :
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
